--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <title>car business</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -134,7 +138,89 @@
         </div>
       </section>
       <section class="fleet">
-        <div class="fleet__container"></div>
+        <div class="fleet__container">
+          <h3 class="fleet__container-title title">Fleet</h3>
+          <div class="fleet__cards">
+            <div class="fleet__card">
+              <div class="fleet__card-image">
+                <img src="image/fleet-car-1.png" alt="fleet-car-1" />
+              </div>
+              <div class="fleet__card-content">
+                <div class="fleet__card-content__heading">
+                  <h3 class="fleet__card-content__title title">FIRST CLASS</h3>
+                  <p class="fleet__card-content__sub">Mercedes maybach s600</p>
+                </div>
+                <p class="fleet__card-content__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Praesent ut eu tellus cursus faucibus duis hendrerit volutpat
+                  neque. Eget integer a amet iaculis. Nullam elit a
+                </p>
+                <div class="fleet__card-icons">
+                  <div class="fleet__card-icon">
+                    <i class="fa-solid fa-users"></i>
+                    <p class="fleet__card-icon__text">4 Seats</p>
+                  </div>
+                  <div class="fleet__card-icon">
+                    <i class="fa-solid fa-suitcase-rolling"></i>
+                    <p class="fleet__card-icon__text">2 Luggage</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="fleet__card">
+              <div class="fleet__card-image">
+                <img src="image/fleet-car-1.png" alt="fleet-car-1" />
+              </div>
+              <div class="fleet__card-content">
+                <div class="fleet__card-content__heading">
+                  <h3 class="fleet__card-content__title title">FIRST CLASS</h3>
+                  <p class="fleet__card-content__sub">Mercedes maybach s600</p>
+                </div>
+                <p class="fleet__card-content__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Praesent ut eu tellus cursus faucibus duis hendrerit volutpat
+                  neque. Eget integer a amet iaculis. Nullam elit a
+                </p>
+                <div class="fleet__card-icons">
+                  <div class="fleet__card-icon">
+                    <i class="fa-solid fa-users"></i>
+                    <p class="fleet__card-icon__text">4 Seats</p>
+                  </div>
+                  <div class="fleet__card-icon">
+                    <i class="fa-solid fa-suitcase-rolling"></i>
+                    <p class="fleet__card-icon__text">2 Luggage</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="fleet__card">
+              <div class="fleet__card-image">
+                <img src="image/fleet-car-1.png" alt="fleet-car-1" />
+              </div>
+              <div class="fleet__card-content">
+                <div class="fleet__card-content__heading">
+                  <h3 class="fleet__card-content__title title">FIRST CLASS</h3>
+                  <p class="fleet__card-content__sub">Mercedes maybach s600</p>
+                </div>
+                <p class="fleet__card-content__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Praesent ut eu tellus cursus faucibus duis hendrerit volutpat
+                  neque. Eget integer a amet iaculis. Nullam elit a
+                </p>
+                <div class="fleet__card-icons">
+                  <div class="fleet__card-icon">
+                    <i class="fa-solid fa-users"></i>
+                    <p class="fleet__card-icon__text">4 Seats</p>
+                  </div>
+                  <div class="fleet__card-icon">
+                    <i class="fa-solid fa-suitcase-rolling"></i>
+                    <p class="fleet__card-icon__text">2 Luggage</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
