--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
             >
           </h3>
         </div>
-        <ul class="nav-parimary__links">
-          <li><a href="#" class="nav-parimary__link active">Home</a></li>
-          <li><a href="#" class="nav-parimary__link">About</a></li>
-          <li><a href="#" class="nav-parimary__link">Services</a></li>
-          <li><a href="#" class="nav-parimary__link">Fleet</a></li>
-          <li><a href="#" class="nav-parimary__link">Contact us</a></li>
-        </ul>
+        <div class="nav-links">
+          <ul class="nav-parimary__links">
+            <li><a href="#" class="nav-parimary__link active">Home</a></li>
+            <li><a href="#" class="nav-parimary__link">About</a></li>
+            <li><a href="#" class="nav-parimary__link">Services</a></li>
+            <li><a href="#" class="nav-parimary__link">Fleet</a></li>
+            <li><a href="#" class="nav-parimary__link">Contact us</a></li>
+          </ul>
+        </div>
+        <i class="fa-solid fa-bars menu-bar"></i>
       </nav>
-      <section class="header-hero">
+
+      <!-- <section class="header-hero">
         <div class="hero__bg-image">
           <img src="image/desk-hero-bg-image.png" alt="" />
         </div>
@@ -50,7 +54,7 @@
             />
           </div>
         </div>
-      </section>
+      </section> -->
     </header>
     <main>
       <section class="about">
@@ -223,5 +227,6 @@
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
