--- a/index.html
+++ b/index.html
@@ -32,14 +32,23 @@
         <i class="fa-solid fa-bars menu-bar"></i>
       </nav>
 
-      <!-- <section class="header-hero">
+      <section class="header-hero">
         <div class="hero__bg-image">
           <img src="image/desk-hero-bg-image.png" alt="" />
         </div>
         <div class="hero">
           <div class="hero__content">
             <div class="hero__content-left--line">
-              <img src="image/line-rectange.png" alt="" />
+              <img
+                src="image/line-rectange.png"
+                class="hero__content-left--line__desktops"
+                alt=""
+              />
+              <img
+                src="image/mabile-line-rectange.png"
+                class="hero__content-left--line__mobile"
+                alt=""
+              />
             </div>
             <h3 class="hero__content-title">
               Premium <br />
@@ -52,9 +61,14 @@
               class="hero__image-img"
               alt="desktop-hero-image"
             />
+            <img
+              src="image/mobile-hero-image.png"
+              class="hero__bg-image-mobile"
+              alt="mobile-hero-image"
+            />
           </div>
         </div>
-      </section> -->
+      </section>
     </header>
     <main>
       <section class="about">
@@ -64,6 +78,12 @@
               src="image/About image-1.png"
               alt="about-img"
               class="about-img"
+            />
+
+            <img
+              src="image/mobile-About-image.png"
+              alt="mobile-about-img"
+              class="mobile-about-img"
             />
           </div>
           <div class="about__content">
@@ -89,7 +109,16 @@
           <div class="services__cards">
             <div class="services__card">
               <div class="services__card-image">
-                <img src="image/services-icon-1.png" alt="services-icon-1" />
+                <img
+                  src="image/services-icon-1.png"
+                  alt="services-icon-1"
+                  class="service__card-desktop"
+                />
+                <img
+                  src="image/mobile-services-icon-1.png"
+                  alt="services-icon-3"
+                  class="service__card-mobile"
+                />
               </div>
               <div class="services__card-content">
                 <p class="services__card-content__description">
@@ -106,7 +135,16 @@
             </div>
             <div class="services__card">
               <div class="services__card-image">
-                <img src="image/services-icon-2.png" alt="services-icon-2" />
+                <img
+                  src="image/services-icon-2.png"
+                  alt="services-icon-2"
+                  class="service__card-desktop"
+                />
+                <img
+                  src="image/mobile-services-icon-2.png"
+                  alt="services-icon-3"
+                  class="service__card-mobile"
+                />
               </div>
               <div class="services__card-content">
                 <p class="services__card-content__description">
@@ -123,7 +161,16 @@
             </div>
             <div class="services__card">
               <div class="services__card-image">
-                <img src="image/services-icon-3.png" alt="services-icon-3" />
+                <img
+                  src="image/services-icon-3.png"
+                  alt="services-icon-3"
+                  class="service__card-desktop"
+                />
+                <img
+                  src="image/mobile-services-icon-3.png"
+                  alt="services-icon-3"
+                  class="service__card-mobile"
+                />
               </div>
               <div class="services__card-content">
                 <p class="services__card-content__description">
