--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
           </div>
         </div>
       </section>
+     <section class="counter">
+        <div class="counter__cards">
+          <div class="counter__card"></div>
+          <div class="counter__card"></div>
+          <div class="counter__card"></div>
+        </div>
+     </section>
     </main>
     <script src="script.js"></script>
   </body>
